editor content overflow fixed

--- a/frontend/src/Css/editorStyle.module.css
+++ b/frontend/src/Css/editorStyle.module.css
@@ -1,14 +1,14 @@
 .editor {
     box-sizing: border-box;
     border: 1px solid #ddd;
-    
+    cursor: text;
     padding: 16px;
     border-radius: 2px;
     margin-bottom: 2em;
     box-shadow: inset 0px 1px 8px -3px #ABABAB;
     background: #fefefe;
     width: 600px;
-    overflow-y: scroll;
+    
   }
   .editorRead {
     box-sizing: border-box;
@@ -23,6 +23,6 @@
   }
   
   .editor :global(.public-DraftEditor-content) {
-    min-height: 540px;
-    
+    height: 500px;
+    overflow-y: auto;
   }
